--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
     <div class="container justify-content-center" id="sobre">
       <div class="row">
         <div class="col-12 text-center my-5">
-          <h1 class="display-3"> <i class="fa fa-cogs" aria-hidden="true"></i> Lorem ipsum dolor sit amet.</h1>
+          <!--<h1 class="display-3"> <i class="fa fa-cogs" aria-hidden="true"></i> Lorem ipsum dolor sit amet.</h1>
           <p>Sed eu purus vulputate, efficitur est eu, viverra nibh.</p>
-        </div>
+        </div> -->
       </div>
 
 	<div class="row mb-5">
@@ -213,13 +213,13 @@
 		
 		<div id="online" class="justify-content-center p-5">
 			<div class="row">
-				<div class="col-12 text-center my-5">
+				<!--<div class="col-12 text-center my-5">
 					<h1 class="display-3"> <i class="fa fa-cogs" aria-hidden="true"></i> Lorem ipsum dolor sit amet.</h1>
 					<p>Sed eu purus vulputate, efficitur est eu, viverra nibh.</p>
-				</div>
+				</div> -->
 			</div>
 		 <div class="row mb-5 justify-content-md-center">
-			<div class="col-sm-3"> 
+			<div class="col-sm-4"> 
 			  
 			  <img class="card-img-top" src="images/amj_logo.png">
 			  <div class="card-body">
@@ -231,18 +231,7 @@
 			  </div>
 			</div>
 
-			<div class="col-sm-3"> 
-			  <img class="card-img-top" src="images/amj_logo.png">
-			  <div class="card-body">
-				<h4 class="card-title">Resolução de Problemas Frequentes para CT e MR</h4>
-				<p class="card-text">Se você tem equipamento em contrato conosco, poderá acompanhar  aqui chamados técnicos e outras informações. Requer senha de acesso. 
-				</p>
-				<a href="#" class="card-link">Saiba mais</a>
-				<a href="#" class="card-link">Clique aqui</a>
-			  </div>
-			</div> 
-
-			<div class="col-sm-3"> 
+			<div class="col-sm-4"> 
 			  
 			  <img class="card-img-top" src="images/amj_logo.png">
 			  <div class="card-body">
