--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                     </div> -->
                 </div>
                 
-                <div class="row mb-5 justify-content-md-center">
+                <div class="row mb-5 justify-content-md-center text-center">
                     <div class="col-sm-4"> 
                         <img class="card-img-top" src="images/amj_logo.png">
                             <div class="card-body">
@@ -304,17 +304,17 @@
             <div class="row mb-5 justify-content-md-center">
             
                 <div class="col-sm-3"> 
-                    <h1 class="display-1 text-primary ml-5"><i class="fas fa-phone"></i></h1>
+                    <h1 class="display-1 text-primary"><i class="fas fa-phone"></i></h1>
                     <h3 class="text-secondary"> (91) 98187-8004</h3>
                 </div>
 
                 <div class="col-sm-3"> 
-                    <h1 class="display-1 text-primary ml-5"><i class="fab fa-whatsapp"></i></h1>
+                    <h1 class="display-1 text-primary"><i class="fab fa-whatsapp"></i></h1>
                     <h3 class="text-secondary"> (91) 98187-8004</h3>
                 </div>
 
                 <div class="col-sm-3"> 
-                    <h1 class="display-1 text-primary ml-5"><i class="fas fa-envelope"></i></h1>
+                    <h1 class="display-1 text-primary"><i class="fas fa-envelope"></i></h1>
                     <h3 class="text-secondary"> amj@amjmedical.com.br </h3>
                 </div>
 			
