--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="images/carousel/img1.jpg" class="img-fluid mx-auto d-block" >
+                  <img src="images/carousel/img1.png" class="img-fluid mx-auto d-block" >
                   <div class="carousel-caption sombra">
                     <h4>EXPERTISE</h4>
                     <h5> Experts em CT e MR desde 1996</h5>
